<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/todo_fragment"
        android:icon="@drawable/ic_todo"
        android:title="@string/todo" />
    <item
        android:id="@+id/calendar_fragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar" />
    <item
        android:id="@+id/pomodoro_fragment"
        android:icon="@drawable/ic_timer"
        android:title="@string/pomodoro" />
    <item
        android:id="@+id/statistics_fragment"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics" />
    <item
        android:id="@+id/ai_fragment"
        android:icon="@drawable/ic_ai"
        android:title="@string/ai_assistant" />
</menu>
