<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_date"
                android:title="@string/sort_by_date" />
            <item
                android:id="@+id/action_sort_priority"
                android:title="@string/sort_by_priority" />
            <item
                android:id="@+id/action_sort_alphabetical"
                android:title="@string/sort_alphabetically" />
        </menu>
    </item>

</menu>